test/official_tests/field/set_evaluation_order.lox
undefined1.bar // error: {"line":1,"message":"Undefined variable 'undefined1'","type":"RuntimeError"}
  = undefined2;